--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <!-- Banner section -->
-    <h1>Hello guys</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, fugiat.</p>
 
     <h1> hello Urmi</h1>
 
