--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
 
     <!-- Banner section -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, fugiat.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, fugiat.</p>
 
-    <h1> hello Urmi</h1>
+        <h1> hello Urmi</h1>
 
+    <h1> jekono Tag </h1>
   </body>
 </html>
